wip (non compila)

--- a/Mower Arduino Code/Mower_V6.31/MEGA_V6.31/todo.txt
+++ b/Mower Arduino Code/Mower_V6.31/MEGA_V6.31/todo.txt
@@ -1,1 +1,5 @@
 - No_Wire_Found: indica se il robot sta seguendo il cavo oppure no...si può togliere?
+
+- Fare unico metodo per aggiornare LCD
+
+- controlalre byte e std:byte
